Add function to check users In AuthController there is a function to check user. Now registration is more clean

--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -43,7 +43,7 @@
                 >*</span>
 
                 <div class="card__pad">
-                    <form id="signupForm" class="form" method="post" action="/signup" novalidate>
+                    <form id="signupForm" class="form" method="post" action="/auth/register" novalidate>
                         <div class="form__grid">
                             <div class="form__row">
                                 <label for="firstName">First name</label>
